[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Music/sacrifice.mp3" type="AudioStream" id=1]
[ext_resource path="res://Screens/GameOver/game_over.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/game_robot/GAME ROBOT-Light.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Screens/GameOver/game_over.tres" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Images/gameover.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 3 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_right = -3.0
script = ExtResource( 2 )

[node name="Gameover" type="Sprite" parent="."]
position = Vector2( 952, 358 )
scale = Vector2( 2.19737, 2.18 )
texture = ExtResource( 5 )

[node name="VBox-GameOver" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.0
margin_top = 32.0
margin_right = 338.0
margin_bottom = 454.0
alignment = 1

[node name="RespawnButton" type="Button" parent="VBox-GameOver"]
margin_top = 100.0
margin_right = 676.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "Respawn"

[node name="MainMenu" type="Button" parent="VBox-GameOver"]
margin_top = 178.0
margin_right = 676.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="ExitGame" type="Button" parent="VBox-GameOver"]
margin_top = 252.0
margin_right = 676.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[connection signal="pressed" from="VBox-GameOver/RespawnButton" to="." method="_on_RespawnButton_pressed"]
[connection signal="pressed" from="VBox-GameOver/ExitGame" to="." method="_on_ExitGame_pressed"]
